Advanced/AL-Lab3/p4-microservices-blog/k8s/post-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
        - name: post-service
          image: post-service:latest
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
