Advanced/AL-Lab3/p4-microservices-blog/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
    - host: blog.local
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 80
